--- a/creategroup.html
+++ b/creategroup.html
@@ -84,7 +84,7 @@
                         alert("group created successfully check the link below");
                         document.getElementById("gplink").href = myObj.link;
                         alert(myObj.link);
-                        document.getElementById("gplink").innerText = myObj.link;
+                        document.getElementById("gplink").innerText = "http://www.themisfits.in/" + myObj.link;
                         document.getElementById("savethis").innerHTML = "Save this somewhere else before it gets erased by us";
 
                     } else {
