--- a/view.html
+++ b/view.html
@@ -77,7 +77,7 @@
             myname = sessionStorage.getItem("usnameuid");
             // alert(myname);
             document.getElementById("mylink").href = "lightme.php?usname=" + myname;
-            document.getElementById("mylink").innerHTML = "lightme.php?usname=" + myname;
+            document.getElementById("mylink").innerHTML = "http://www.themisfits.in/lightme.php?usname=" + myname;
             flagme();
             checkCookie();
             var x = getCookie("disable");
